--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     content="Shrawan Kumar, shrawank22, shrawan iitk, shrawan iit kanpur, shrawan, shrawan07, Shrawan Nabinagar, shrawan Aurangabad, Shrawan SLIET, Shrawan Aurangabad Bihar, Shrawan Singh"
     name="keywords">
   <title>Shrawan Kumar</title>
+  <meta name="google-site-verification" content="rfoeUQ9oKYZr9ILMXXceQ19lhtFI1sTbEu3cMJ0zvGU" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
